--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     <a href="#newsletter" class="btn btn-outline-primary me-2">
                         <i class="fas fa-calendar-check"></i> Đặt lịch
                     </a>
-                    <a href="tel:18003333" class="btn btn-outline-primary">
-                        <i class="fas fa-phone"></i> 1800.3333
+                    <a href="tel:0388178062" class="btn btn-outline-primary">
+                        <i class="fas fa-phone"></i> 0388178062
                     </a>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                     </p>
                     <div class="d-flex flex-column flex-md-row gap-3">
                         <a href="#newsletter" class="btn btn-primary btn-lg">🏥 Đặt lịch tư vấn ngay</a>
-                        <a href="#about" class="btn btn-outline-light btn-lg">📞 Hotline: 1800.3333</a>
+                        <a href="#about" class="btn btn-outline-light btn-lg">📞 Hotline: 0388178062</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -585,7 +585,7 @@
                         làm đẹp với công nghệ tiên tiến.</p>
                     <p>
                         <i class="fas fa-envelope me-2"></i> cskh@seoulcenter.vn<br>
-                        <i class="fas fa-phone me-2"></i> 1800.3333 - (+84) 914.269.346<br>
+                        <i class="fas fa-phone me-2"></i> 0388178062 - (+84) 914.269.346<br>
                         <i class="fas fa-clock me-2"></i> Thời gian: 8:30 - 19:30 hằng ngày
                     </p>
                     <div class="social-links mt-3">
@@ -608,9 +608,10 @@
                     <h6 class="fw-bold mb-3">Hỗ trợ khách hàng</h6>
                     <ul class="list-unstyled">
                         <li><a href="#newsletter" class="text-decoration-none">Đặt lịch tư vấn</a></li>
-                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Chính sách bảo hành</a></li>
-                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Quy trình dịch vụ</a></li>
-                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Liên hệ hỗ trợ</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Cách thức mua hàng</a></li>
+                        <li><a href="phuong-thuc-thanh-toan.html" class="text-decoration-none">Phương thức thanh
+                                toán</a></li>
+                        <li><a href="chinh-sach-bao-mat.html" class="text-decoration-none">Chính sách bảo mật</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
@@ -634,7 +635,7 @@
     <!-- Floating Contact Buttons -->
     <div class="floating-contacts">
         <!-- Phone Button -->
-        <a href="tel:18003333" class="floating-btn phone-btn" title="Gọi ngay: 1800.3333">
+        <a href="tel:0388178062" class="floating-btn phone-btn" title="Gọi ngay: 0388178062">
             <i class="fas fa-phone"></i>
         </a>
         <!-- Facebook Button -->
