--- a/nuoc-hoa-nu.html
+++ b/nuoc-hoa-nu.html
@@ -4,24 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- SEO Meta Tags for Iris Beauty Spa & Beauty -->
-    <title>Iris Beauty - Thẩm Mỹ Viện & Spa Chuyên Nghiệp | Chăm Sóc Sắc Đẹp Toàn Diện</title>
+    <!-- SEO Meta Tags for Women's Perfume -->
+    <title>Nước Hoa Nữ Cao Cấp - Iris Beauty | Hương Thơm Quyến Rũ Cho Phái Đẹp</title>
     <meta name="description"
-        content="Iris Beauty - Thẩm mỹ viện & spa chuyên nghiệp, cung cấp dịch vụ làm đẹp, trị liệu da, phun xăm thẩm mỹ, tắm trắng, cấy collagen, nâng cơ, trẻ hóa và chăm sóc sắc đẹp toàn diện tại Việt Nam.">
+        content="Khám phá bộ sưu tập nước hoa nữ cao cấp tại Iris Beauty. Từ hương hoa cỏ nhẹ nhàng đến hương vanilla ngọt ngào, tìm mùi hương hoàn hảo thể hiện vẻ đẹp riêng của bạn.">
     <meta name="keywords"
-        content="Iris Beauty, spa, thẩm mỹ viện, làm đẹp, trị mụn, tắm trắng, phun xăm, cấy collagen, nâng cơ, trẻ hóa da, chăm sóc da, dịch vụ spa, spa uy tín, spa Việt Nam, spa chuyên nghiệp">
+        content="nước hoa nữ, nước hoa nữ cao cấp, perfume for women, hương thơm nữ tính, nước hoa hoa cỏ, nước hoa vanilla, nước hoa quyến rũ, Iris Beauty, nước hoa chính hãng">
     <meta name="author" content="Iris Beauty Spa & Beauty">
-    <meta property="og:title" content="Iris Beauty - Thẩm Mỹ Viện & Spa Chuyên Nghiệp">
+    <meta property="og:title" content="Nước Hoa Nữ Cao Cấp - Iris Beauty">
     <meta property="og:description"
-        content="Dẫn đầu xu hướng làm đẹp, trị liệu da, phun xăm, tắm trắng, cấy collagen, nâng cơ và trẻ hóa tại Việt Nam. Đặt lịch tư vấn ngay tại Iris Beauty.">
+        content="Bộ sưu tập nước hoa nữ cao cấp với những hương thơm nữ tính, thanh lịch và đầy mê hoặc. Tìm mùi hương hoàn hảo cho phong cách của bạn.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://irisbeauty.vn/">
+    <meta property="og:url" content="https://irisbeauty.vn/nuoc-hoa-nu.html">
     <meta property="og:image" content="https://irisbeauty.vn/assets/images/LOGO01.png">
     <meta property="og:site_name" content="Iris Beauty Spa & Beauty">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Iris Beauty - Thẩm Mỹ Viện & Spa Chuyên Nghiệp">
+    <meta name="twitter:title" content="Nước Hoa Nữ Cao Cấp - Iris Beauty">
     <meta name="twitter:description"
-        content="Iris Beauty - Spa & thẩm mỹ viện chuyên nghiệp, chăm sóc sắc đẹp toàn diện, công nghệ hiện đại, đội ngũ chuyên gia uy tín.">
+        content="Khám phá bộ sưu tập nước hoa nữ cao cấp với hương thơm quyến rũ, nữ tính và thanh lịch tại Iris Beauty.">
     <meta name="twitter:image" content="https://irisbeauty.vn/assets/images/LOGO01.png">
 
     <!-- Bootstrap CSS -->
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html" style="font-family: 'Playfair Display', serif;">
-                <img src="assets/images/LOGO01.png" alt="SpaStore" height="40" class="d-inline-block align-text-top">
+                <img src="assets/images/LOGO01.png" alt="Iris Beauty" height="40" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -60,15 +60,15 @@
                         <a class="nav-link active" href="shopnuochoa.html" target="_blank">NƯỚC HOA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#contact">LIÊN HỆ</a>
+                        <a class="nav-link" href="#contact">LIÊN HỆ</a>
                     </li>
                 </ul>
                 <div class="d-flex">
-                    <a href="#" class="btn btn-outline-primary me-2">
-                        <i class="fas fa-user"></i> Tài khoản
+                    <a href="#newsletter" class="btn btn-outline-primary me-2">
+                        <i class="fas fa-calendar-check"></i> Đặt lịch
                     </a>
-                    <a href="#" class="btn btn-outline-primary">
-                        <i class="fas fa-shopping-cart"></i> Giỏ hàng
+                    <a href="tel:0388178062" class="btn btn-outline-primary">
+                        <i class="fas fa-phone"></i> 0388178062
                     </a>
                 </div>
             </div>
@@ -753,59 +753,61 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-white py-5">
+    <footer id="contact" class="bg-white py-5">
         <div class="container">
             <div class="row g-4">
                 <div class="col-lg-4">
                     <h5 class="fw-bold mb-3" style="font-family: 'Playfair Display', serif;">
-                        <img src="assets/images/LOGO01.png" alt="SpaStore" height="32"
+                        <img src="assets/images/LOGO01.png" alt="Iris Beauty" height="32"
                             class="d-inline-block align-text-top me-2">
                     </h5>
-                    <p>Điểm đến cao cấp của bạn cho nước hoa xa xỉ chính hãng từ khắp nơi trên thế
-                        giới.</p>
+                    <p>Hệ thống thẩm mỹ viện Iris Beauty với nhiều chi nhánh trên toàn quốc. Chuyên cung cấp dịch vụ
+                        làm đẹp với công nghệ tiên tiến.</p>
                     <p>
-                        <i class="fas fa-envelope me-2"></i> spa.store@gmail.com<br>
-                        <i class="fas fa-phone me-2"></i> +84 (028) 123-4567
+                        <i class="fas fa-envelope me-2"></i> cskh@seoulcenter.vn<br>
+                        <i class="fas fa-phone me-2"></i> 0388178062 - (+84) 914.269.346<br>
+                        <i class="fas fa-clock me-2"></i> Thời gian: 8:30 - 19:30 hằng ngày
                     </p>
                     <div class="social-links mt-3">
-                        <a href="#" class="text-white me-3"><i class="fab fa-facebook fa-lg"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-instagram fa-lg"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-youtube fa-lg"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-tiktok fa-lg"></i></a>
+                        <a href="#" class="me-3"><i class="fab fa-facebook fa-lg"></i></a>
+                        <a href="#" class="me-3"><i class="fab fa-instagram fa-lg"></i></a>
+                        <a href="#" class="me-3"><i class="fab fa-youtube fa-lg"></i></a>
+                        <a href="#" class="me-3"><i class="fab fa-tiktok fa-lg"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-2">
-                    <h6 class="fw-bold mb-3">Mua sắm</h6>
+                    <h6 class="fw-bold mb-3">Dịch vụ</h6>
                     <ul class="list-unstyled">
-                        <li><a href="nuoc-hoa-nam.html" class="text-decoration-none">Nước hoa nam</a></li>
-                        <li><a href="nuoc-hoa-nu.html" class="text-decoration-none">Nước hoa nữ</a></li>
-                        <li><a href="nuoc-hoa-unisex.html" class="text-decoration-none">Nước hoa unisex</a>
-                        </li>
-                        <li><a href="shop.html" class="text-decoration-none">Tất cả sản phẩm</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Trị mụn y khoa</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Tắm trắng 5in1</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Cấy collagen</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Phun xăm thẩm mỹ</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
-                    <h6 class="fw-bold mb-3">Dịch vụ khách hàng</h6>
+                    <h6 class="fw-bold mb-3">Hỗ trợ khách hàng</h6>
                     <ul class="list-unstyled">
-                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Hướng dẫn kích thước</a></li>
-                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Hướng dẫn bảo quản</a></li>
-                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Liên hệ hỗ trợ</a></li>
+                        <li><a href="#newsletter" class="text-decoration-none">Đặt lịch tư vấn</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Cách thức mua hàng</a></li>
+                        <li><a href="phuong-thuc-thanh-toan.html" class="text-decoration-none">Phương thức thanh
+                                toán</a></li>
+                        <li><a href="chinh-sach-bao-mat.html" class="text-decoration-none">Chính sách bảo mật</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
-                    <h6 class="fw-bold mb-3">Vị trí cửa hàng</h6>
+                    <h6 class="fw-bold mb-3">Hệ thống cơ sở</h6>
                     <div class="small">
-                        <p><i class="fas fa-map-marker-alt me-2"></i> 123 Nguyễn Huệ, Quận 1, TP.HCM<br>
-                            Mở cửa: 9h - 21h</p>
-                        <p><i class="fas fa-map-marker-alt me-2"></i> 456 Hoàn Kiếm, Hà Nội<br>
-                            Mở cửa: 10h - 20h</p>
+                        <p><i class="fas fa-map-marker-alt me-2"></i> 375 Nguyễn Thượng Hiền, Q.10, TP.HCM<br>
+                            Mở cửa: 8:30 - 19:30</p>
+                        <p><i class="fas fa-map-marker-alt me-2"></i> 38 Phố Thái Thịnh, Đống Đa, Hà Nội<br>
+                            Mở cửa: 8:30 - 19:30</p>
                     </div>
                 </div>
             </div>
             <hr class="my-4">
             <div class="text-center">
-                <p class="mb-0">&copy; 2024 SpaStore | All rights reserved | <a href="index.html" class="">Trang chủ</a>
-                </p>
+                <p class="mb-0">&copy; 2024 Iris Beauty - Hệ Thống Thẩm Mỹ Quốc Tế | All rights reserved</p>
+                <p class="small text-muted">*Mức độ hiệu quả tùy vào cơ địa của mỗi khách hàng</p>
             </div>
         </div>
     </footer>
@@ -813,7 +815,7 @@
     <!-- Floating Contact Buttons -->
     <div class="floating-contacts">
         <!-- Phone Button -->
-        <a href="tel:18003333" class="floating-btn phone-btn" title="Gọi ngay: 1800.3333">
+        <a href="tel:0388178062" class="floating-btn phone-btn" title="Gọi ngay: 0388178062">
             <i class="fas fa-phone"></i>
         </a>
         <!-- Facebook Button -->
