--- a/product-detail-my-pham.html
+++ b/product-detail-my-pham.html
@@ -809,12 +809,12 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h6 class="fw-bold mb-3">Dịch vụ khách hàng</h6>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Hướng dẫn sử
-                                dụng</a></li>
-                        <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Hướng dẫn bảo
-                                quản</a></li>
-                        <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Liên hệ hỗ
-                                trợ</a></li>
+                        <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Cách thức mua
+                                hàng</a></li>
+                        <li class="mb-2"><a href="phuong-thuc-thanh-toan.html" class="text-decoration-none">Phương thức
+                                thanh toán</a></li>
+                        <li class="mb-2"><a href="chinh-sach-bao-mat.html" class="text-decoration-none">Chính sách bảo
+                                mật</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
@@ -837,7 +837,7 @@
     <!-- Floating Contact Buttons -->
     <div class="floating-contacts">
         <!-- Phone Button -->
-        <a href="tel:18003333" class="floating-btn phone-btn" title="Gọi ngay: 1800.3333">
+        <a href="tel:0388178062" class="floating-btn phone-btn" title="Gọi ngay: 0388178062">
             <i class="fas fa-phone"></i>
         </a>
         <!-- Facebook Button -->
