--- a/shopmypham.html
+++ b/shopmypham.html
@@ -319,7 +319,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">Yehwadam</div>
-                                            <a href="product-detail-my-pham.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-my-pham.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Bộ Dưỡng Trắng Sang Da Jeju Magnolia</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Bộ serum dưỡng trắng từ hoa mộc lan Jeju
@@ -364,7 +365,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">Yehwadam</div>
-                                            <a href="product-detail-my-pham.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-my-pham.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Bộ Dưỡng Trẻ Hóa Da Hwansaenggo</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Bộ chăm sóc da chống lão hóa cao cấp</p>
@@ -408,7 +410,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">Yehwadam</div>
-                                            <a href="product-detail-my-pham.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-my-pham.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Bộ Dưỡng Trắng Trẻ Hóa Da Rejuvenating</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Bộ chăm sóc da toàn diện trắng mịn trẻ hóa
@@ -453,7 +456,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">The Face Shop</div>
-                                            <a href="product-detail-my-pham.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-my-pham.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Serum Vitamin C Brightening</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Serum làm sáng da với Vitamin C tự nhiên
@@ -498,7 +502,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">Laneige</div>
-                                            <a href="product-detail-my-pham.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-my-pham.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Kem Dưỡng Ẩm Water Bank</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Kem dưỡng ẩm chuyên sâu cho da khô</p>
@@ -542,7 +547,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">Etude House</div>
-                                            <a href="product-detail-my-pham.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-my-pham.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Serum Retinol Anti-Aging</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Serum chống lão hóa với công nghệ Retinol
@@ -587,7 +593,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">Innisfree</div>
-                                            <a href="product-detail-my-pham.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-my-pham.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Toner Cấp Ẩm Green Tea</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Toner cân bằng độ ẩm từ trà xanh Jeju</p>
@@ -631,7 +638,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">The Face Shop</div>
-                                            <a href="product-detail-my-pham.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-my-pham.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Sữa Rửa Mặt Rice Water Bright</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Sữa rửa mặt làm sáng da từ nước gạo</p>
@@ -675,7 +683,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">Etude House</div>
-                                            <a href="product-detail-my-pham.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-my-pham.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Mặt Nạ Dưỡng Ẩm 0.2 Therapy</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Mặt nạ giấy cấp ẩm chuyên sâu</p>
@@ -801,9 +810,10 @@
                 <div class="col-lg-3">
                     <h6 class="fw-bold mb-3">Dịch vụ khách hàng</h6>
                     <ul class="list-unstyled">
-                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Hướng dẫn sử dụng</a></li>
-                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Hướng dẫn bảo quản</a></li>
-                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Liên hệ hỗ trợ</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Cách thức mua hàng</a></li>
+                        <li><a href="phuong-thuc-thanh-toan.html" class="text-decoration-none">Phương thức thanh
+                                toán</a></li>
+                        <li><a href="chinh-sach-bao-mat.html" class="text-decoration-none">Chính sách bảo mật</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
@@ -827,7 +837,7 @@
     <!-- Floating Contact Buttons -->
     <div class="floating-contacts">
         <!-- Phone Button -->
-        <a href="tel:18003333" class="floating-btn phone-btn" title="Gọi ngay: 1800.3333">
+        <a href="tel:0388178062" class="floating-btn phone-btn" title="Gọi ngay: 0388178062">
             <i class="fas fa-phone"></i>
         </a>
         <!-- Facebook Button -->
