--- a/shopnuochoa.html
+++ b/shopnuochoa.html
@@ -358,7 +358,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">Creed</div>
-                                            <a href="product-detail-nuoc-hoa.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-nuoc-hoa.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Aventus</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Hương thơm nam tính với note trái cây và gỗ
@@ -403,7 +404,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">Tom Ford</div>
-                                            <a href="product-detail-nuoc-hoa.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-nuoc-hoa.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Black Orchid</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Hương thơm quyến rũ và bí ẩn</p>
@@ -448,7 +450,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">Le Labo</div>
-                                            <a href="product-detail-nuoc-hoa.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-nuoc-hoa.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Santal 33</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Hương gỗ đàn hương độc đáo và hiện đại</p>
@@ -492,7 +495,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">Maison Francis</div>
-                                            <a href="product-detail-nuoc-hoa.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-nuoc-hoa.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Baccarat Rouge 540</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Hương thơm xa xỉ với note đường và hoa</p>
@@ -536,7 +540,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">Dior</div>
-                                            <a href="product-detail-nuoc-hoa.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-nuoc-hoa.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Sauvage</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Hương thơm tươi mát và nam tính</p>
@@ -580,7 +585,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">Chanel</div>
-                                            <a href="product-detail-nuoc-hoa.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-nuoc-hoa.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Bleu de Chanel</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Hương thơm tinh tế và lịch lãm</p>
@@ -624,7 +630,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">Chanel</div>
-                                            <a href="product-detail-nuoc-hoa.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-nuoc-hoa.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Coco Mademoiselle</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Hương thơm quyến rũ và hiện đại</p>
@@ -668,7 +675,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">YSL</div>
-                                            <a href="product-detail-nuoc-hoa.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-nuoc-hoa.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">Black Opium</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Hương thơm quyến rũ và bí ẩn</p>
@@ -712,7 +720,8 @@
                                         </a>
                                         <div class="product-info">
                                             <div class="product-brand">Dior</div>
-                                            <a href="product-detail-nuoc-hoa.html" class="product-link text-decoration-none">
+                                            <a href="product-detail-nuoc-hoa.html"
+                                                class="product-link text-decoration-none">
                                                 <h5 class="product-name">J'adore</h5>
                                             </a>
                                             <p class="text-muted small mb-2">Hương hoa tinh tế và nữ tính</p>
@@ -836,9 +845,10 @@
                 <div class="col-lg-3">
                     <h6 class="fw-bold mb-3">Dịch vụ khách hàng</h6>
                     <ul class="list-unstyled">
-                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Hướng dẫn kích thước</a></li>
-                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Hướng dẫn bảo quản</a></li>
-                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Liên hệ hỗ trợ</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Cách thức mua hàng</a></li>
+                        <li><a href="phuong-thuc-thanh-toan.html" class="text-decoration-none">Phương thức thanh
+                                toán</a></li>
+                        <li><a href="chinh-sach-bao-mat.html" class="text-decoration-none">Chính sách bảo mật</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
@@ -862,7 +872,7 @@
     <!-- Floating Contact Buttons -->
     <div class="floating-contacts">
         <!-- Phone Button -->
-        <a href="tel:18003333" class="floating-btn phone-btn" title="Gọi ngay: 1800.3333">
+        <a href="tel:0388178062" class="floating-btn phone-btn" title="Gọi ngay: 0388178062">
             <i class="fas fa-phone"></i>
         </a>
         <!-- Facebook Button -->
