--- a/hoi-dap-ve-hang-hoa.html
+++ b/hoi-dap-ve-hang-hoa.html
@@ -115,6 +115,12 @@
                                             hàng</a></li>
                                     <li class="mb-1"><span class="text-primary small fw-bold">Hỏi đáp về hàng hóa</span>
                                     </li>
+                                    <li class="mb-1"><a href="chinh-sach-bao-mat.html"
+                                            class="sidebar-link text-decoration-none text-dark small">Chính sách bảo
+                                            mật</a></li>
+                                    <li class="mb-1"><a href="phuong-thuc-thanh-toan.html"
+                                            class="sidebar-link text-decoration-none text-dark small">Phương thức thanh
+                                            toán</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -767,7 +773,7 @@
                                 câu hỏi thường gặp</a></li>
                         <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Phương thức vận
                                 chuyển</a></li>
-                        <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Phương thức
+                        <li class="mb-2"><a href="phuong-thuc-thanh-toan.html" class="text-decoration-none">Phương thức
                                 thanh toán</a></li>
                         <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Theo
                                 dõi đơn hàng</a></li>
@@ -775,7 +781,7 @@
                                 sách giá cả</a></li>
                         <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Chính
                                 sách đổi trả</a></li>
-                        <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Chính
+                        <li class="mb-2"><a href="chinh-sach-bao-mat.html" class="text-decoration-none">Chính
                                 sách bảo mật</a></li>
                     </ul>
                 </div>
@@ -866,7 +872,7 @@
     <!-- Floating Contact Buttons -->
     <div class="floating-contacts">
         <!-- Phone Button -->
-        <a href="tel:18003333" class="floating-btn phone-btn" title="Gọi ngay: 1800.3333">
+        <a href="tel:0388178062" class="floating-btn phone-btn" title="Gọi ngay: 0388178062">
             <i class="fas fa-phone"></i>
         </a>
         <!-- Facebook Button -->
