add cart and checkout pages

--- a/huong-dan-dat-hang.html
+++ b/huong-dan-dat-hang.html
@@ -45,9 +45,9 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Trang Chủ</a>
+                        <a class="nav-link" href="index.html">SPA</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="shopmypham.html" target="_blank">MỸ PHẨM</a>
@@ -56,9 +56,17 @@
                         <a class="nav-link" href="shopnuochoa.html" target="_blank">NƯỚC HOA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#footer">Liên Hệ</a>
+                        <a class="nav-link" href="#contact">LIÊN HỀ</a>
                     </li>
                 </ul>
+                <div class="d-flex">
+                    <a href="#" class="btn btn-outline-primary me-2">
+                        <i class="fas fa-user"></i> Tài khoản
+                    </a>
+                    <a href="#" class="btn btn-outline-primary">
+                        <i class="fas fa-shopping-cart"></i> Giỏ hàng
+                    </a>
+                </div>
             </div>
         </div>
     </nav>
