--- a/nuoc-hoa-nam.html
+++ b/nuoc-hoa-nam.html
@@ -64,11 +64,11 @@
                     </li>
                 </ul>
                 <div class="d-flex">
-                    <a href="#newsletter" class="btn btn-outline-primary me-2">
-                        <i class="fas fa-calendar-check"></i> Đặt lịch
+                    <a href="#" class="btn btn-outline-primary me-2">
+                        <i class="fas fa-user"></i> Tài khoản
                     </a>
-                    <a href="tel:0388178062" class="btn btn-outline-primary">
-                        <i class="fas fa-phone"></i> 0388178062
+                    <a href="#" class="btn btn-outline-primary">
+                        <i class="fas fa-shopping-cart"></i> Giỏ hàng
                     </a>
                 </div>
             </div>
